<resources>
    <string name="app_name">microMathematics Plus</string>
    <string name="app_short_name">μMath+</string>
    <string name="app_description">Extended visual calculator: live editing and computations of formulas</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string-array name="activity_titles">
        <item>Worksheet</item>
        <item>How To Use</item>
        <item>Example</item>
        <item>Example</item>
        <item>Example</item>
        <item>Example</item>
        <item>About</item>
        <item>Documentation</item>
    </string-array>
    <string-array name="activity_subtitles">
        <item>My Document</item>
        <item>App Description</item>
        <item>Function Plot</item>
        <item>Polar Function Plot</item>
        <item>3D Plot</item>
        <item>Series and Integrals</item>
        <item>microMathematics Plus</item>
        <item>Download PDF</item>
    </string-array>
    <string-array name="activity_resources">
        <item></item>
        <item>asset:/doc_en/how_to_use.xml</item>
        <item>asset:/doc_en/function_plot.xml</item>
        <item>asset:/doc_en/polar_plot.xml</item>
        <item>asset:/doc_en/three_d_plot.xml</item>
        <item>asset:/doc_en/series_and_integrals.xml</item>
        <item>asset:/doc_en/about_micromath.xml</item>
        <item>https://docs.google.com/viewer?url=https://github.com/mkulesh/microMathematics/raw/supplement/doc/microMathematics-v2.16.2.pdf</item>
    </string-array>
    <string name="activity_example">Examples</string>
    <string name="activity_welcome">asset:/doc_en/welcome.xml</string>
    <string name="allow_storage_access_title">Allow to access worksheet files</string>
    <string name="allow_storage_access_description">This app needs you to grant permission to access the worksheet files on this device</string>
    <string name="allow_storage_access_grant">Grant permission</string>
    <string name="action_exit">Exit</string>
    <string name="action_play">Calculate worksheet</string>
    <string name="action_stop">Stop calculation</string>
    <string name="action_object_properties">Object properties</string>
    <string name="action_undo">Undo</string>
    <string name="action_discard">Delete selected</string>
    <string name="action_document_settings">Document settings</string>
    <string name="action_new_document">New document</string>
    <string name="action_open">Open file</string>
    <string name="action_save">Save file</string>
    <string name="action_save_as">Save as</string>
    <string name="action_export">Export</string>
    <string name="action_licenses">Open source licenses</string>
    <string name="action_details">Details</string>
    <string name="action_app_settings">App settings</string>
    <string name="context_expand">Expand selection</string>
    <string name="context_copy">Copy</string>
    <string name="context_cut">Cut</string>
    <string name="context_paste">Paste</string>
    <string name="pref_developer_mode">Developer options</string>
    <string name="pref_app_language">App language</string>
    <string-array name="pref_language_names" translatable="false">
        <item>English</item>
        <item>Русский</item>
        <item>Deutsch</item>
        <item>Português (Brasil)</item>
    </string-array>
    <string name="pref_default_language_code" translatable="false">en</string>
    <string-array name="pref_language_codes" translatable="false">
        <item>en</item>
        <item>ru</item>
        <item>de</item>
        <item>pt-rBR</item>
    </string-array>
    <string name="pref_app_theme">App theme</string>
    <string-array name="pref_theme_names">
        <item>Light (Indigo and Orange)</item>
        <item>Light (Teal and Deep Orange)</item>
        <item>Light (Blue Gray and Indigo)</item>
        <item>Dark (Dim Gray and Cyan)</item>
    </string-array>
    <string name="pref_default_theme_code" translatable="false">indigo-orange</string>
    <string-array name="pref_theme_codes" translatable="false">
        <item>indigo-orange</item>
        <item>teal-deep-orange</item>
        <item>gray-indigo</item>
        <item>dark-cyan</item>
    </string-array>
    <string name="dialog_navigation_accept">OK</string>
    <string name="dialog_navigation_cancel">Cancel</string>
    <string name="dialog_button_decrease">Decrease value</string>
    <string name="dialog_button_increase">Increase value</string>
    <string name="dialog_new_formula_insert_before">Insert before selected</string>
    <string name="dialog_new_formula_insert_after">Insert after selected</string>
    <string name="dialog_new_formula_insert_left">Insert in left of selected</string>
    <string name="dialog_new_formula_insert_right">Insert in right of selected</string>
    <string name="dialog_line_settings_title">Line settings</string>
    <string name="dialog_line_settings_widthlabel">Line width and style</string>
    <string name="dialog_axis_settings_title">Grid settings</string>
    <string name="dialog_axis_settings_xlabels">Number of X-labels</string>
    <string name="dialog_axis_settings_ylabels">Number of Y-labels</string>
    <string name="dialog_plot_settings_title">Plot settings</string>
    <string name="dialog_plot_settings_width">Plot width</string>
    <string name="dialog_plot_settings_height">Plot height</string>
    <string name="dialog_plot_settings_axes_boxed">Boxed</string>
    <string name="dialog_plot_settings_axes_crossed">Crossed</string>
    <string name="dialog_plot_settings_axes_none">Without box and axes</string>
    <string name="dialog_plot_point_shapes">Show symbols</string>
    <string name="dialog_plot_point_shape_size" formatted="false">Symbol size (% of line width)</string>
    <string name="dialog_plot_point_square">Square-shaped points</string>
    <string name="dialog_plot_point_circle">Circle-shaped points</string>
    <string name="dialog_plot_point_diamond">Diamond-shaped points</string>
    <string name="dialog_plot_point_cross">X-shaped points</string>
    <string name="dialog_surface_settings_contour">Contour plot</string>
    <string name="dialog_surface_settings_surface">Surface plot</string>
    <string name="dialog_surface_settings_mesh_lines">Show mesh lines</string>
    <string name="dialog_surface_settings_mesh_fill">Fill mesh with color</string>
    <string name="dialog_surface_settings_mesh_opacity">Opacity</string>
    <string name="dialog_surface_settings_rotation">Rotation angle</string>
    <string name="dialog_surface_settings_elevation">Elevation angle</string>
    <string name="dialog_text_style_chapter">Chapter</string>
    <string name="dialog_text_style_section">Section</string>
    <string name="dialog_text_style_subsection">Subsection</string>
    <string name="dialog_text_style_subsubsection">Subsubsection</string>
    <string name="dialog_text_style_text_body">Text body</string>
    <string name="dialog_text_style_numbering">Numbering</string>
    <string name="math_new_element">New element</string>
    <string name="math_new_equation">Add equation</string>
    <string name="math_new_result">Add result view</string>
    <string name="math_new_function_plot">Add function plot</string>
    <string name="math_new_contour_plot">Add 3D plot</string>
    <string name="math_new_text_fragment">Add text fragment</string>
    <string name="math_new_image_fragment">Add image from file</string>
    <string name="action_dev_autotest">Automatic test</string>
    <string name="action_dev_export_doc">Export documentation</string>
    <string name="action_dev_take_screenshot">Export screenshots</string>
    <string name="dialog_licenses_support_v7">The Android Support v7 Library</string>
    <string name="dialog_licenses_support_v7_path">https://developer.android.com</string>
    <string name="dialog_licenses_support_v7_text">Copyright © 2013 The Android Open Source Project\n\nLicensed under the Apache License, Version 2.0 (the \"License\"). You may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="dialog_licenses_math3">The Apache Commons Mathematics Library</string>
    <string name="dialog_licenses_math3_path">http://commons.apache.org</string>
    <string name="dialog_licenses_math3_text">Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to You under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="dialog_licenses_colorpicker">HoloColorPicker Library</string>
    <string name="dialog_licenses_colorpicker_path">https://github.com/LarsWerkman/HoloColorPicker</string>
    <string name="dialog_licenses_colorpicker_text">Copyright © 2012 Lars Werkman\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="dialog_licenses_androidsvg">AndroidSVG Library</string>
    <string name="dialog_licenses_androidsvg_path">https://github.com/BigBadaboom/androidsvg</string>
    <string name="dialog_licenses_androidsvg_text">Copyright © 2013 Paul LeBeau, Cave Rock Software Ltd\n\nLicensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttps://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="dialog_licenses_ghostcommander">Ghost Commander Engine</string>
    <string name="dialog_licenses_ghostcommander_path">https://sourceforge.net/projects/ghostcommander/</string>
    <string name="dialog_licenses_ghostcommander_text">Copyright © 2017 Ghost Commander\n\nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.\n\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.\n\nYou should have received a copy of the GNU General Public License along with this program. If not, see https://www.gnu.org/licenses/.</string>
</resources>