<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:micromath="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:orderInCategory="100"
        android:title="@string/action_undo"
        micromath:showAsAction="always"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_content_new"
        android:orderInCategory="300"
        android:title="@string/math_new_element"
        micromath:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_discard"
        android:icon="@drawable/ic_action_content_discard"
        android:orderInCategory="400"
        android:title="@string/action_discard"
        micromath:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_document_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_document_settings"
        android:orderInCategory="500"
        micromath:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_new_document"
        android:title="@string/action_new_document"
        android:orderInCategory="510"
        micromath:showAsAction="never"/>
    <item
        android:id="@+id/action_open"
        android:icon="@drawable/ic_action_content_open"
        android:orderInCategory="600"
        android:title="@string/action_open"
        android:visible="false"
        micromath:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_action_content_save"
        android:orderInCategory="700"
        android:title="@string/action_save"
        android:visible="false"
        micromath:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_save_as"
        android:orderInCategory="800"
        android:title="@string/action_save_as"
        micromath:showAsAction="never"/>
    <item
        android:id="@+id/action_export"
        android:orderInCategory="810"
        android:title="@string/action_export"
        micromath:showAsAction="never"/>
    <item
        android:id="@+id/action_licenses"
        android:orderInCategory="900"
        android:title="@string/action_licenses"
        micromath:showAsAction="never"/>
    <item
        android:id="@+id/action_app_settings"
        android:orderInCategory="905"
        android:title="@string/action_app_settings"
        micromath:showAsAction="never"/>
    <item
        android:id="@+id/action_dev_mode"
        android:orderInCategory="910"
        android:title="@string/pref_developer_mode"
        android:visible="false"
        micromath:showAsAction="never" >
        <menu>
	        <item
		        android:id="@+id/action_dev_autotest"
		        android:orderInCategory="10"
		        android:title="@string/action_dev_autotest"
		        micromath:showAsAction="never"/>
            <item
                android:id="@+id/action_dev_export_doc"
                android:orderInCategory="20"
                android:title="@string/action_dev_export_doc"
                micromath:showAsAction="never"/>
            <item
                android:id="@+id/action_dev_take_screenshot"
                android:orderInCategory="30"
                android:title="@string/action_dev_take_screenshot"
                micromath:showAsAction="never"/>
        </menu>
	</item>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="920"
        android:title="@string/action_exit"
        micromath:showAsAction="never"/>

</menu>
