<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dialog_content_padding"
            android:paddingTop="@dimen/dialog_content_padding"
            android:orientation="vertical"
            android:gravity="center_horizontal" >

           <ImageButton
               style="@style/DialogImageButtonStyle"
               android:id="@+id/dialog_button_insert_before"
               android:contentDescription="@string/dialog_new_formula_insert_before"
               android:src="@drawable/ic_add_before" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/DialogImageButtonStyle"
                    android:id="@+id/dialog_button_insert_left"
                    android:contentDescription="@string/dialog_new_formula_insert_left"
                    android:src="@drawable/ic_add_left" />

                <View
	                android:layout_width="68dp"
	                android:layout_height="match_parent" />

                <ImageButton
                    style="@style/DialogImageButtonStyle"
                    android:id="@+id/dialog_button_insert_right"
                    android:contentDescription="@string/dialog_new_formula_insert_right"
                    android:src="@drawable/ic_add_right" />
            </LinearLayout>

            <ImageButton
                style="@style/DialogImageButtonStyle"
                android:id="@+id/dialog_button_insert_after"
                android:contentDescription="@string/dialog_new_formula_insert_after"
                android:src="@drawable/ic_add_after" />

            <View
                style="@style/HorizontalDividerStyle"
                android:layout_marginBottom="@dimen/dialog_content_padding"
                android:layout_marginTop="@dimen/dialog_content_padding" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    style="@style/DialogImageButtonStyle"
                    android:id="@+id/dialog_button_new_equation"
                    android:contentDescription="@string/math_new_equation"
                    android:src="@drawable/p_equation" />

                <ImageButton
                    style="@style/DialogImageButtonStyle"
                    android:id="@+id/dialog_button_new_result"
                    android:contentDescription="@string/math_new_result"
                    android:src="@drawable/p_result" />

                <ImageButton
                    style="@style/DialogImageButtonStyle"
                    android:id="@+id/dialog_button_new_function_plot"
                    android:contentDescription="@string/math_new_function_plot"
                    android:src="@drawable/p_plot_function" />

                <ImageButton
                    style="@style/DialogImageButtonStyle"
                    android:id="@+id/dialog_button_new_contour_plot"
                    android:contentDescription="@string/math_new_contour_plot"
                    android:src="@drawable/p_plot_contour" />
                
                <ImageButton
                    style="@style/DialogImageButtonStyle"
                    android:id="@+id/dialog_button_new_text_fragment"
                    android:contentDescription="@string/math_new_text_fragment"
                    android:src="@drawable/p_text_fragment" />

                <ImageButton
                    android:id="@+id/dialog_button_new_image_fragment"
                    style="@style/DialogImageButtonStyle"
                    android:contentDescription="@string/math_new_image_fragment"
                    android:src="@drawable/p_image_fragment" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</merge>