<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dialog_panel_vertical_padding"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dialog_content_padding"
            android:paddingTop="@dimen/dialog_content_padding" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_support_v7"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_content_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_support_v7_path"
                android:textColor="@color/fman_path_color"
                android:textSize="@dimen/dialog_licenses_path_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_support_v7_text"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_licenses_text_size"
                android:typeface="monospace" />

            <View
                style="@style/HorizontalDividerStyle"
                android:layout_marginBottom="@dimen/dialog_content_padding"
                android:layout_marginTop="@dimen/dialog_content_padding" />

            <TextView
                android:id="@+id/text_view_developer_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_math3"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_content_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_math3_path"
                android:textColor="@color/fman_path_color"
                android:textSize="@dimen/dialog_licenses_path_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_math3_text"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_licenses_text_size"
                android:typeface="monospace" />

            <View
                style="@style/HorizontalDividerStyle"
                android:layout_marginBottom="@dimen/dialog_content_padding"
                android:layout_marginTop="@dimen/dialog_content_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_colorpicker"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_content_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_colorpicker_path"
                android:textColor="@color/fman_path_color"
                android:textSize="@dimen/dialog_licenses_path_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_colorpicker_text"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_licenses_text_size"
                android:typeface="monospace" />

            <View
                style="@style/HorizontalDividerStyle"
                android:layout_marginBottom="@dimen/dialog_content_padding"
                android:layout_marginTop="@dimen/dialog_content_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_androidsvg"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_content_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_androidsvg_path"
                android:textColor="@color/fman_path_color"
                android:textSize="@dimen/dialog_licenses_path_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_androidsvg_text"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_licenses_text_size"
                android:typeface="monospace" />
            
            <View
                style="@style/HorizontalDividerStyle"
                android:layout_marginBottom="@dimen/dialog_content_padding"
                android:layout_marginTop="@dimen/dialog_content_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_ghostcommander"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_content_text_size"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_ghostcommander_path"
                android:textColor="@color/fman_path_color"
                android:textSize="@dimen/dialog_licenses_path_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/dialog_licenses_ghostcommander_text"
                android:textColor="@color/dialog_content_color"
                android:textSize="@dimen/dialog_licenses_text_size"
                android:typeface="monospace" />
        </LinearLayout>
    </ScrollView>

</merge>