<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ microMathematics - Extended Visual Calculator
  ~ Copyright (C) 2014-2022 by Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:micromath="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/context_menu_insert_before"
        android:icon="@drawable/ic_add_left"
        android:title="@string/dialog_new_formula_insert_left"
        micromath:showAsAction="always"/>
    <item
        android:id="@+id/context_menu_expand"
        android:icon="@drawable/ic_action_content_expand"
        android:title="@string/context_expand"
        micromath:showAsAction="always"/>
    <item
        android:id="@+id/context_menu_cut"
        android:icon="@drawable/ic_action_content_cut"
        android:title="@string/context_cut"
        micromath:showAsAction="always"/>
    <item
        android:id="@+id/context_menu_copy"
        android:icon="@drawable/ic_action_content_copy"
        android:title="@string/context_copy"
        micromath:showAsAction="always"/>
    <item
        android:id="@+id/context_menu_paste"
        android:icon="@drawable/ic_action_content_paste"
        android:title="@string/context_paste"
        micromath:showAsAction="always"/>
   
</menu>
