<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dialog_content_padding"
            android:paddingTop="@dimen/dialog_content_padding" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/dialog_text_style_chapter"
                    style="@style/RadioButtonStyle"
                    android:text="@string/dialog_text_style_chapter" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/dialog_text_style_section"
                    style="@style/RadioButtonStyle"
                    android:text="@string/dialog_text_style_section" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/dialog_text_style_subsection"
                    style="@style/RadioButtonStyle"
                    android:text="@string/dialog_text_style_subsection" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/dialog_text_style_subsubsection"
                    style="@style/RadioButtonStyle"
                    android:text="@string/dialog_text_style_subsubsection" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/dialog_text_style_text_body"
                    style="@style/RadioButtonStyle"
                    android:text="@string/dialog_text_style_text_body" />
            </RadioGroup>

            <View
                style="@style/HorizontalDividerStyle"
                android:layout_marginBottom="@dimen/dialog_content_padding"
                android:layout_marginTop="@dimen/dialog_content_padding" />

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/dialog_text_style_numbering"
                style="@style/CheckBoxStyle"
                android:checked="false"
                android:text="@string/dialog_text_style_numbering" />
        </LinearLayout>
    </ScrollView>

</merge>