<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014-2018 Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_default_language_code"
        android:entries="@array/pref_language_names"
        android:entryValues="@array/pref_language_codes"
        android:key="app_language"
        android:summary="%s"
        android:title="@string/pref_app_language"/>

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="developer_mode"
        android:title="@string/pref_developer_mode"
        android:widgetLayout="@layout/pref_check_box"/>

</PreferenceScreen>